<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.openyolo.demoapp.simplest.MainActivity">

    <TextView
        android:text="@string/welcome_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"/>

    <Button
        android:text="@string/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSignIn"
        android:layout_margin="16dp"/>

    <Button
        android:text="@string/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSignUp"
        android:layout_margin="16dp"/>

</LinearLayout>
